@@ -1,7 +1,7 @@
-/* $Id: upnpreplyparse.c,v 1.11 2011/02/07 16:17:06 nanard Exp $ */
+/* $Id: upnpreplyparse.c,v 1.14 2013/05/14 19:53:54 nanard Exp $ */
 /* MiniUPnP project
  * http://miniupnp.free.fr/ or http://miniupnp.tuxfamily.org/
- * (c) 2006-2011 Thomas Bernard
+ * (c) 2006-2013 Thomas Bernard
  * This software is subject to the conditions detailed
  * in the LICENCE file provided within the distribution */
 
@@ -15,18 +15,55 @@
 static void
 NameValueParserStartElt(void * d, const char * name, int l)
 {
-    struct NameValueParserData * data = (struct NameValueParserData *)d;
+	struct NameValueParserData * data = (struct NameValueParserData *)d;
+	data->topelt = 1;
     if(l>63)
         l = 63;
     memcpy(data->curelt, name, l);
     data->curelt[l] = '\0';
+	data->cdata = NULL;
+	data->cdatalen = 0;
+}
+
+static void
+NameValueParserEndElt(void * d, const char * name, int l)
+{
+    struct NameValueParserData * data = (struct NameValueParserData *)d;
+    struct NameValue * nv;
+	(void)name;
+	(void)l;
+	if(!data->topelt)
+		return;
+	if(strcmp(data->curelt, "NewPortListing") != 0)
+	{
+		int l;
+		/* standard case. Limited to 63 chars strings */
+		l = data->cdatalen;
+	    nv = malloc(sizeof(struct NameValue));
+	    if(l>63)
+	        l = 63;
+	    strncpy(nv->name, data->curelt, 64);
+		nv->name[63] = '\0';
+		if(data->cdata != NULL)
+		{
+			memcpy(nv->value, data->cdata, l);
+			nv->value[l] = '\0';
+		}
+		else
+		{
+			nv->value[0] = '\0';
+		}
+	    LIST_INSERT_HEAD( &(data->head), nv, entries);
+	}
+	data->cdata = NULL;
+	data->cdatalen = 0;
+	data->topelt = 0;
 }
 
 static void
 NameValueParserGetData(void * d, const char * datas, int l)
 {
     struct NameValueParserData * data = (struct NameValueParserData *)d;
-    struct NameValue * nv;
 	if(strcmp(data->curelt, "NewPortListing") == 0)
 	{
 		/* specific case for NewPortListing which is a XML Document */
@@ -42,15 +79,9 @@ NameValueParserGetData(void * d, const char * datas, int l)
 	}
 	else
 	{
-		/* standard case. Limited to 63 chars strings */
-	    nv = malloc(sizeof(struct NameValue));
-	    if(l>63)
-	        l = 63;
-	    strncpy(nv->name, data->curelt, 64);
-		nv->name[63] = '\0';
-	    memcpy(nv->value, datas, l);
-	    nv->value[l] = '\0';
-	    LIST_INSERT_HEAD( &(data->head), nv, entries);
+		/* standard case. */
+		data->cdata = datas;
+		data->cdatalen = l;
 	}
 }
 
@@ -67,7 +98,7 @@ ParseNameValue(const char * buffer, int bufsize,
     parser.xmlsize = bufsize;
     parser.data = data;
     parser.starteltfunc = NameValueParserStartElt;
-    parser.endeltfunc = 0;
+    parser.endeltfunc = NameValueParserEndElt;
     parser.datafunc = NameValueParserGetData;
 	parser.attfunc = 0;
     parsexml(&parser);
