@@ -1,7 +1,7 @@
-/* $Id: upnpreplyparse.h,v 1.12 2012/01/21 13:30:33 nanard Exp $ */
+/* $Id: upnpreplyparse.h,v 1.16 2013/05/14 20:37:13 nanard Exp $ */
 /* MiniUPnP project
  * http://miniupnp.free.fr/ or http://miniupnp.tuxfamily.org/
- * (c) 2006-2012 Thomas Bernard
+ * (c) 2006-2013 Thomas Bernard
  * This software is subject to the conditions detailed
  * in the LICENCE file provided within the distribution */
 
@@ -29,6 +29,9 @@ struct NameValueParserData {
     char curelt[64];
 	char * portListing;
 	int portListingLength;
+	int topelt;
+	const char * cdata;
+	int cdatalen;
 };
 
 /* ParseNameValue() */
