@@ -1,6 +1,9 @@
 $Id: Changelog.txt,v 1.186 2013/05/14 20:37:35 nanard Exp $
 miniUPnP client Changelog.
 
+2013/05/14:
+  Update upnpreplyparse to take into account "empty" elements
+
 2013/05/03:
   Fix Solaris build thanks to Maciej Małecki
 
